# likes

./: Makefile  README.md  archives.html  authors.html  categories.html  chicken.html  coffee.html  dinosaurs.html  doom-metal.html  economy.html  geese.html  harmonica.html  horror-books.html  index.html  index2.html  japan.html  lofi-hip-hop.html  manga.html  matcha-tea.html  origami.html  outrun.html  pelicanconf.py  philosophy.html  photography.html  publishconf.py  pyproject.toml  rats.html  sauna.html  shrimp.html  snakes.html  succulents.html  tags.html  tasks.py  tea.html  thailand.html  vaporwave.html  watercolor.html  zdislav-beksinski.html
author/: bernard.html  bernard2.html
category/: misc.html  misc2.html
content/: chicken.md  coffee.md  dinosaurs.md  doom-metal.md  economy.md  example.md  geese.md  harmonica.md  horror-books.md  japan.md  lofi-hiphop.md  manga.md  matcha.md  origami.md  outrun.md  philosophy.md  photography.md  rats.md  sauna.md  shrimp.md  succulents.md  tea.md  thailand.md  vaporwave.md  watercolor.md  zdislav_beksinski.md
content/img/: README.md
feeds/: all-en.atom.xml  all.atom.xml  bernard.atom.xml  bernard.rss.xml  misc.atom.xml
plugins/: README.md
tag/: activity.html  animal.html  art.html  artist.html  books.html  concept.html  country.html  drinks.html  food.html  genre.html  health.html  hobbies.html  horror.html  japan.html  music.html  nature.html  painting.html  pet.html  photography.html  place.html  plant.html  reading.html  style.html  theory.html  tool.html
theme/css/: main.css  main.scss
wil/: README.md
(+9 files in other folders)
