[tool.poetry]
name = "wil"
version = "0.1.0"
description = "static website generator to share what you like and enjoy!"
authors = ["granitosaurus <tinarg@protonmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
pelican = "^4.2.0"
invoke = "^1.4.1"
pillow = "^7.0.0"  # for thumbnailer plugin
ghp-import = "^0.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

